// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard should counter increment 1`] = `
<DocumentFragment>
  <div
    class="productCard undefined"
  >
    <h1>
      Product Card
    </h1>
    <span>
      1
    </span>
    <button>
      Increase
    </button>
  </div>
</DocumentFragment>
`;

exports[`ProductCard should render the component correctly 1`] = `
<DocumentFragment>
  <div
    class="productCard undefined"
  >
    <h1>
      Product Card
    </h1>
  </div>
</DocumentFragment>
`;
